--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:12345678@localhost:5432/sfa
+sqlalchemy.url = postgresql://postgres:qwe123@localhost:5432/sfa
 
 
 [post_write_hooks]
